CMAKE_MINIMUM_REQUIRED(VERSION 3.14 FATAL_ERROR)

PROJECT("${CMAKE_PROJECT_NAME}Test" LANGUAGES CXX
    VERSION ${CMAKE_PROJECT_VERSION} DESCRIPTION "${CMAKE_PROJECT_NAME} Test")

SET(PROJECT_BINARY "${PROJECT_NAME}${BUILD_ARCH_BITS}")

SET(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
SET(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
SET(INSTALL_GMOCK OFF CACHE BOOL "" FORCE)

ADD_SUBDIRECTORY(
  googletest.git
)

IF(NOT TARGET GTest::GTest)
  ADD_LIBRARY(GTest::GTest ALIAS gtest)
  ADD_LIBRARY(GTest::Main ALIAS gtest_main)
ENDIF()

IF(NOT TARGET GTest::GMock)
  ADD_LIBRARY(GMock::GMock ALIAS gmock)
  ADD_LIBRARY(GMock::Main ALIAS gmock_main)
ENDIF()

ENABLE_TESTING()

ADD_EXECUTABLE(${PROJECT_BINARY} test.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_BINARY}
    GTest::GTest
    GTest::Main
    GMock::GMock
    GMock::Main
)

ADD_TEST(all ${PROJECT_BINARY})
